# EMOLOG

./: .env.example  .gitignore  API_IMPLEMENTATION_STATUS.md  BUGFIXES.md  FIREBASE_SETUP.md  LICENSE  LOG_CHECK_GUIDE.md  PROJECT_EVIDENCE.md  QUICKSTART.md  README.md  main.py  package-lock.json  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: auto-assign.yml
agent/: workflow.py
app/api/routes/: __init__.py  calendar.py  diary.py  extractor.py  log.py  notification.py  report.py  stats.py
app/core/: __init__.py  config.py  firebase.py  logging.py
app/models/: schemas.py
app/repository/: calendar_repository.py  diary_repository.py  report_repository.py
app/service/: calendar_classifier.py  extractor_service.py  log_extractor.py  report_service.py
app/services/notification/: __init__.py  notification_llm.py  (+5 more)
docs/: coding-convention.md  langgraph-architecture.md  langgraph-mermaid.md
firebase-credentials/: README.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx
mobile/: App.tsx  FONT_SETUP.md  app.json  package-lock.json  package.json
mobile/config/: api.ts
mobile/screens/: DeveloperScreen.tsx  HomeScreen.tsx  JournalWriteScreen.tsx  LoginScreen.tsx  ReportScreen.tsx  SettingsScreen.tsx  StatsScreen.tsx
mobile/services/: api.ts  journalService.ts  savedRecordsService.ts  userService.ts
mobile/types/: journal.ts
mobile/utils/: journalConverter.ts
notebooks/: ai_experiments.ipynb  eval_noti.ipynb  eval_report.ipynb  extractor.ipynb  plan.ipynb  report.ipynb
scripts/: insert_test_data.py
(+10 files in other folders)
